# onetick-py

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .markdownlint.yml  .markdownlintignore  .pre-commit-config.yaml  .test_durations  .xmllintignore  .yamllint.yml  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  conftest.py  docker-compose-webapi.yml  mypy.ini  pylama.ini  pylintrc  pyproject.toml  pytest.ini  ruff.toml  setup.py  sonar-project.properties
doc_sphinx/: Makefile  README.md  _toc.yml  build-multiversion.sh  build.sh  conf.py  conftest.py  ignore_spelling.txt  intro.rst  make_switcher_js.py  post-process-markdown.sh  run_tests.sh  spell_filters.py  start-jupyter
doc_sphinx/_templates/: custom-class-template.rst  custom-module-template.rst  page.html  sourcelink-md.html
doc_sphinx/api/: config.rst  performance.rst  root.rst  run.rst  run_async.rst
doc_sphinx/api/aggregations/: average.rst  correlation.rst  count.rst  distinct.rst  exp_tw_average.rst  exp_w_average.rst  find_value_for_percentile.rst  first.rst  first_tick.rst  first_time.rst  generic.rst  high_tick.rst  high_time.rst  implied_vol.rst  last.rst  last_tick.rst  last_time.rst  linear_regression.rst  low_tick.rst  low_time.rst  max.rst  mean.rst  median.rst  min.rst  multi_portfolio_price.rst  num_distinct.rst  ob_num_levels.rst  ob_size.rst  ob_snapshot.rst  ob_snapshot_flat.rst  ob_snapshot_wide.rst  ob_summary.rst  ob_vwap.rst  option_price.rst  partition_evenly_into_groups.rst  percentile.rst  portfolio_price.rst  ranking.rst  return_ep.rst  root.rst  (+6 more)
doc_sphinx/api/data_inspection/: databases.rst  db.rst  derived_databases.rst  root.rst
doc_sphinx/api/datetime/: date.rst  dt.rst  now.rst  root.rst  timedelta.rst
doc_sphinx/api/functions/: coalesce.rst  cut.rst  format.rst  join.rst  join_by_time.rst  join_with_aggregated_window.rst  merge.rst  oqd.rst  qcut.rst  save_sources_to_single_file.rst
doc_sphinx/api/misc/: __build__.rst  __main_one_tick_dir__.rst  __version__.rst  adaptive.rst  by_symbol.rst  callback.rst  default_by_type.rst  eval.rst  expr.rst  meta_fields.rst  multi_output_source.rst  oneticklib.rst  param.rst  query.rst  query_parameters.rst  range.rst  raw.rst  remote.rst  render.rst  sql.rst  symbol_param.rst  tmp_dir.rst  tmp_file.rst
doc_sphinx/api/operation/: __getitem__.rst  apply.rst  astype.rst  cumsum.rst  dtype.rst  expr.rst  fillna.rst  isin.rst  map.rst  root.rst  round.rst
doc_sphinx/api/oqd/: corporate_actions.rst  descriptive_fields.rst  ohlcv.rst  root.rst  shares_outstanding.rst
doc_sphinx/api/otq_api/: root.rst_
doc_sphinx/api/session/: acl.rst  config.rst  db.rst  fault_tolerance.rst  load_balancing.rst  locator.rst  ref_db.rst  remote_ts.rst  session.rst  test_session.rst
doc_sphinx/api/source/: Symbol.rst  __call__.rst  __getitem__.rst  __setitem__.rst  add_fields.rst  add_prefix.rst  add_suffix.rst  agg.rst  apply.rst  cache.rst  character_present.rst  copy.rst  corp_actions.rst  count.rst  deepcopy.rst  diff.rst  distinct.rst  drop.rst  dropna.rst  dump.rst  estimate_ts_delay.rst  execute.rst  exp_tw_average.rst  exp_w_average.rst  fillna.rst  find_value_for_percentile.rst  first.rst  get_name.rst  head.rst  high.rst  high_time.rst  if_else.rst  implied_vol.rst  insert_at_end.rst  insert_data_quality_event.rst  insert_tick.rst  intercept_data_quality.rst  intercept_symbol_errors.rst  join_with_collection.rst  join_with_query.rst  (+71 more)
doc_sphinx/api/sources/: csv.rst  data_file.rst  data_source.rst  empty.rst  load_ticks_from_dataframe.rst  odbc.rst  point_in_time.rst  query.rst  read_cache.rst  read_from_dataframe.rst  read_from_kdb.rst  read_parquet.rst  ref_data.rst  show_snapshot_list.rst  split_query_output_by_symbol.rst  symbology_mapping.rst  symbols.rst  tick.rst  ticks.rst
doc_sphinx/api/state/: dynamic_tick.rst  root.rst  tick_deque.rst  tick_deque_tick.rst  tick_list.rst  tick_list_tick.rst  tick_sequence_tick.rst  tick_set.rst  tick_set_tick.rst  tick_set_unordered.rst  var.rst
doc_sphinx/api/types/: byte.rst  decimal.rst  inf.rst  int.rst  long.rst  msectime.rst  nan.rst  nsectime.rst  root.rst  short.rst  string.rst  uint.rst  ulong.rst  varstring.rst
doc_sphinx/js/: rag.js
doc_sphinx/notebooks_resources/config/: acl  locator  main
doc_sphinx/notebooks_resources/otqs/: merge.otq  update.otq  where_clause.otq  without_pins.otq
doc_sphinx/static/: compatibility.rst  render_example.dot  root.rst  test_intro.rst
doc_sphinx/static/concepts/: calc_graph.rst  data_model.rst  (+9 more)
doctest_resources/: README.md  add_w.otq  data.arrow  data.csv  data_diff_quote_chars.csv  qte.csv  test_existed.otq  trd.csv  update.otq
onetick-init/: CHANGELOG.md  README.md  pylama.ini
ot_integration/: collect.sh
src/locator_parser/: common.py
src/onetick/: __init__.py
tests/: __init__.py  compatibility.py  test_otp.py
tests/core/: test_adaptive_tick_type.py  test_alerts.py  test_ambiguous.py  test_auth.py  test_bit_ops.py  test_bool.py  test_branch.py  test_cep.py  test_column.py  test_config.py  test_dataframe_source.py  test_date.py  test_datetime.py  test_default_constants.py  test_end_time.py  test_eval_query.py  test_example.py  test_expressions.py  test_external_md_db.py  test_init.py  test_lag_lead_operator.py  test_math.py  test_max_min.py  test_misc.py  test_multi_output_source.py  test_nan.py  test_nested_otqs.py  test_onetick_lib.py  test_onetick_query_binding.py  test_operations.py  test_output_formats.py  test_parameters.py  test_perf.py  test_python_way_comparision.py  test_query_and_Query_with_db.py  test_query_parameters.py  test_query_source.py  test_quotes.otq  test_real.py  test_render.py  (+20 more)
tests/docs/: conftest.py
tests/locator_parser/: test_acl.py  test_locator.py
tests/onetick-lib/: test_one_tick_lib.py
webapi/: README.md  check-packages-compatibility.sh  create-config.py  onetick.Dockerfile  run_compose_tests.sh  run_webapi_server.sh  webapi.Dockerfile
webapi/initial_configs/: acl.xml  locator.default  onetick-initial.cfg  onetick-tomcat.cfg  onetick.cfg  tomcat-users.xml
(+495 files in other folders)
