[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "onetick-py"
description = "Python package that allows you to work with OneTick"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "solutions", email="solutions@onetick.com"},
]
dynamic = [
    "version",
    "scripts",
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">= 3.9"
classifiers = [
    "Topic :: Database :: Front-Ends",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "coolname>=2.0.0",
    "graphviz>=0.20.1",
    "numpy>=1.20.3",
    "packaging>=21.0",
    "pandas>=1.5.2",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "tzdata>=2022.5",
    "tzlocal>=4.2",
]

[project.urls]
Documentation = "https://docs.pip.distribution.sol.onetick.com"
OneTick = "https://onetick.com"
GitHub = "https://github.com/onemarketdata/onetick-py"
Issues = "https://github.com/onemarketdata/onetick-py/issues"

[project.optional-dependencies]
webapi = [
    "onetick-query-webapi>=1.0.0",
]
polars = [
    "polars>=1.12.0",
]
strict = [
    "numpy==1.23.0 ; python_full_version == '3.10.*'",
    "numpy==1.23.0 ; python_full_version == '3.9.*'",
    "numpy==1.26.4 ; python_full_version == '3.11.*'",
    "numpy==1.26.4 ; python_full_version == '3.12.*'",
    "pandas==1.5.2 ; python_full_version == '3.9.*'",
    "pandas==1.5.3 ; python_full_version == '3.10.*'",
    "pandas==1.5.3 ; python_full_version == '3.11.*'",
    "pandas==2.2.1 ; python_full_version == '3.12.*'",
    "pandas==2.3.0 ; python_full_version == '3.13.*'",
    "pandas==2.3.3 ; python_full_version == '3.14.*'",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["**/_per_tick_scripts/*.script"]

[tool.black]
line-length = 120
skip-string-normalization = true

[dependency-groups]
dev = [
    "backoff>=2.2.1",
    "build>=1.4.0",
    "jinja2==3.1.2",
    "jupyter==1.0.0",
    "jupyter-book>=1.0.0,<2.0.0",
    "markupsafe==2.1.2",
    "matplotlib>=3.6.3",
    "onetick-py-test==1.2.9",
    "polars>=1.12.0",
    "pydata-sphinx-theme>=0.16.1",
    "pytest-cov==5.0.0",
    "pytest-mock==1.11.0",
    "pytest-sphinx==0.5.0",
    "pytest-split==0.8.1",
    "sphinx>=7.4.7",
    "sphinx-copybutton>=0.5.2",
    "sphinx-reredirects>=0.1.3",
    "sphinx-togglebutton>=0.4.4",
    "sphinxcontrib-spelling>=8.0.0",
    "twine==6.1.0",
    "wheel==0.38.4",
]
